--- a/hrms/templates/hrms/registrations/login.html
+++ b/hrms/templates/hrms/registrations/login.html
@@ -14,7 +14,7 @@
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="{% static '/hrms/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'hrms/css/style.css' %}">
   <!-- endinject -->
   <link rel="shortcut icon" href="{% static 'hrms/images/favicon.png' %}" />
 </head>
