--- a/hrms/templates/hrms/registrations/login.html
+++ b/hrms/templates/hrms/registrations/login.html
@@ -58,8 +58,8 @@
                   <button class="btn btn-primary submit-btn btn-block">Login</button>
                 </div>               
                 <div class="text-block text-center my-3">
-<!--                  <span class="text-small font-weight-semibold">Not a member ?</span>-->
-<!--                  <a href="{%  url 'hrms:reg'  %} " class="text-black text-small">Create new account</a>-->
+                  <span class="text-small font-weight-semibold">Not a member ?</span>
+                  <a href="{%  url 'hrms:reg'  %} " class="text-black text-small">Create new account</a>
                 </div>
               </form>
             </div>
