--- a/hrms/templates/hrms/sidebar.html
+++ b/hrms/templates/hrms/sidebar.html
@@ -14,7 +14,7 @@
                   </div>
                 </div>
               </div>
-              <a href="{% url 'hrms:employee_new' %}" class="btn btn-primary btn-block">New Staff
+              <a href="{% url 'hrms:employee_new' %}" class="btn btn-primary btn-block">New Employee
                 <i class="mdi mdi-plus"></i>
               </a>
               <a href="{% url 'hrms:reg' %}" class="btn btn-primary btn-block">New Admin
