--- a/hrms/templates/hrms/employee/index.html
+++ b/hrms/templates/hrms/employee/index.html
@@ -48,7 +48,7 @@
                       {% for employee in employees  %}
                         <tr>
                           <td class="font-weight-medium">
-                            <img src="{{employee.thumb.url}}" class='rounded img-fluid' alt="">
+                            <img src="{{employee.thumb.url}}" class='rounded img-fluid' id="thumbnail" alt="">
                           </td>
                           <td>
                             {{employee.first_name}}
@@ -111,12 +111,21 @@
         </div>
       </div>
         {% block noty %}
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.12.1/datatables.min.css"/>
+        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.12.1/datatables.min.js"></script>
         <script>
           {% if messages %}
             {% for message in messages  %}
               toastr.success('{{message}}')
             {% endfor %}
           {% endif %}
+          $('#employees123').DataTable({
+             "aaSorting": [[1,'asc']],
+             dom: 'Bfrtip',
+             buttons: [
+                 'copy', 'csv', 'excel', 'pdf', 'print'
+             ]
+          });
         </script>
         {% endblock noty %}
         {% endblock content %}
