--- a/hrms/static/hrms/css/style.css
+++ b/hrms/static/hrms/css/style.css
@@ -16299,3 +16299,19 @@ ul {
     border-left: 3px solid rgba(255, 255, 255, 0.2); } }
 
 /*# sourceMappingURL=maps/style.css.map */
+
+.thumbnail {
+    top:-50px;
+    left:-35px;
+    display:block;
+    z-index:999;
+    cursor: pointer;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease;
+    }
+
+    /*change the number below to scale to the appropriate size*/
+    .thumbnail:hover {
+    transform: scale(3);
+}
