--- a/hrms/templates/hrms/employee/index.html
+++ b/hrms/templates/hrms/employee/index.html
@@ -2,10 +2,9 @@
 {% load static %}
 {% block title %} All Employees | ITSC-HRMS {% endblock title %}
       <!--  MAIN BODY START HERE -->
-
-
           {% block content %}
-     <div class="main-panel">
+
+      <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
             <div class="row">
@@ -20,9 +19,9 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">All Employees<a href="{% url 'hrms:employee_new' %}" class="btn btn-sm btn-success mb-3 float-right">Add New +</a></h4>
-                    
+
                   <div class="table-responsive">
-                    <table class="table table-bordered" id="employee_all">
+                    <table class="table table-bordered">
                       <thead>
                         <tr>
                           <th>
@@ -39,17 +38,17 @@
                           </th>
                           <th>
                             E-mail
-                          </th> 
+                          </th>
                           <th>
                             Actions
-                          </th>                         
+                          </th>
                         </tr>
                       </thead>
                       <tbody>
                       {% for employee in employees  %}
                         <tr>
                           <td class="font-weight-medium">
-                            <img src="{{employee.thumb.url}}" class='rounded img-fluid' id="thumbnail" alt="">
+                            <img src="{{employee.thumb.url}}" class='rounded img-fluid' alt="">
                           </td>
                           <td>
                             {{employee.first_name}}
@@ -60,11 +59,11 @@
                           <td>
                            {{employee.mobile}}
                           </td>
-                          <td class="text-danger"> 
+                          <td class="text-danger">
                             {{employee.email}}
                           </td>
                           <td>
-                          
+
                             <div class="btn-group dropdown">
                               <button type="button" class="btn btn-success dropdown-toggle btn-rounded btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                <i class="fa fa-cog "></i> Manage
@@ -78,7 +77,7 @@
                                 <a class="dropdown-item" href="{% url 'hrms:employee_delete' pk=employee.pk %}">
                                   <i class="fa fa-trash text-danger fa-fw"></i>Delete</a>
                               </div>
-                            </div>                  
+                            </div>
                           </td>
                         </tr>
                         {% endfor %}
@@ -98,12 +97,12 @@
                         {% if page_obj.has_next %}
                           <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a></li>
                         {% else %}
-                          <li class="page-item disabled"><span class='page-link '>Next</span></li> 
-                        {% endif %}                        
+                          <li class="page-item disabled"><span class='page-link '>Next</span></li>
+                        {% endif %}
                         </ul>
                     </nav>
                     {% endif %}
-                
+
                   </div>
                 </div>
               </div>
@@ -121,15 +120,3 @@
         </script>
         {% endblock noty %}
         {% endblock content %}
-      {% block script %}
-      <script type="text/javascript">
-          $('#employee_all').DataTable({
-              "aaSorting": [[1,'asc']],
-              dom: 'Bfrtip',
-              buttons: [
-                  'copy', 'csv', 'excel', 'pdf', 'print'
-              ]
-          });
-      </script>
-
-      {% endblock script %}
