--- a/hrms/templates/hrms/dashboard/index.html
+++ b/hrms/templates/hrms/dashboard/index.html
@@ -93,6 +93,9 @@
                           <th>
                             Mobile
                           </th>
+                          <th>
+                            Action
+                          </th>
                         </tr>
                       </thead>
                       <tbody>
