--- a/hrms/templates/hrms/registrations/login.html
+++ b/hrms/templates/hrms/registrations/login.html
@@ -26,7 +26,7 @@
         <div class="row w-100 mt-5">
           <div class="col-lg-4 mx-auto">
             <div class="text-center mb-2">
-              <img src=" {% static 'hrms/images/tt2_logo.png' %} " width="150px" alt="">
+              <img src=" {% static 'hrms/images/tt2_logo_transparent.png' %} " width="150px" alt="">
             </div>
             <p class="display-4 mb-4 text-center text-white bg-info">Administrator Login</p>
             <div class="auto-form-wrapper mb-5">
@@ -58,8 +58,8 @@
                   <button class="btn btn-primary submit-btn btn-block">Login</button>
                 </div>               
                 <div class="text-block text-center my-3">
-                  <span class="text-small font-weight-semibold">Not a member ?</span>
-                  <a href="{%  url 'hrms:reg'  %} " class="text-black text-small">Create new account</a>
+                  <span class="text-small font-weight-semibold">Not a member ? Please Contact Admin to create account</span>
+<!--                  <a href="{%  url 'hrms:reg'  %} " class="text-black text-small">Create new account</a>-->
                 </div>
               </form>
             </div>
